--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -44,9 +44,13 @@ header {
   position: absolute;
   left: calc(50% - 11rem);
   margin-top: 4rem;
-  border-radius: 12rem 12rem 0 0;
+  border-radius: 2.5rem 2.5rem 0 0;
   overflow: hidden;
   padding: 5rem 1.5rem 1.5rem 1.5rem;
+}
+
+.me img {
+  border-radius: 50%;
 }
 
 /*===== SCROLL =======*/
