--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -1,6 +1,7 @@
 .container.testimonials_container {
   width: 40%;
   padding-bottom: 4rem;
+  overflow: hidden;
 }
 
 .testimonial {
@@ -30,6 +31,21 @@
 
 .swiper-pagination-clickable .swiper-pagination-bullet {
   background: var(--color-primary);
+}
+
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    initial
+  );
+  box-sizing: content-box;
+  overflow: visible;
 }
 
 /*========== MEDIA QUERIES ===========*/
