--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  overflow-x: hidden;
 }
 
 :root {
@@ -45,6 +46,7 @@ body {
 .container {
   width: var(--container-width-lg);
   margin: 0 auto;
+  overflow: visible;
 }
 
 h1,
